--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -18,6 +18,9 @@ jobs:
       with:
         go-version: 1.22
 
+    - name: Go mod tidy
+      run: go mod tidy
+
     - name: Build
       run: go build -v ./...
 
@@ -25,4 +28,4 @@ jobs:
       run: go test -v ./...
       env:
         GODEBUG: x509sha1=1
-        GOARCH: ${{ matrix.arch }}      
+        GOARCH: ${{ matrix.arch }}
